re PR c/9516 (Internal error when using a big array)

PR c/9516
        * expr.c (safe_from_p): Rearrange to avoid deep recursion in
        favour of looping and tail recursion for TREE_LIST and binops.

Co-Authored-By: Richard Henderson <rth@redhat.com>

From-SVN: r65362